--- a/css/style.css
+++ b/css/style.css
@@ -120,14 +120,67 @@ h3 {
 }
 
 
+/**Grid**/
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 2rem;
+}
+
+@media (min-width: 768px) {
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
 /** Productos **/
 
-.producto {}
+.producto {
+    background-color: var(--primarioOscuro);
+    padding: 1rem;
+}
 
-.producto__imagen {}
+.producto__imagen {
+    width: 100%;
+}
 
-.producto__informacion {}
+.producto__nombre {
+    font-size: 4rem;
+}
 
-.producto__nombre {}
+.producto__precio {
+    font-size: 2.8rem;
+    color: var(--secundario)
+}
 
-.producto__precio {}
+.producto__nombre,
+.producto__precio {
+    font-family: var(--fuentePrincipal);
+    margin: 1rem 0;
+    text-align: center;
+    line-height: 1.2;
+}
+
+/**Graficos**/
+.grafico {
+    min-height: 30rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 1 / 3;
+}
+
+.grafico--camisas {
+    grid-row: 2 / 3;
+    background-image: url(../img/grafico1.jpg);
+
+}
+.grafico--node{
+    background-image: url(../img/grafico2.jpg);
+    grid-row: 8 / 9;
+}
+@media (min-width: 768px){
+    .grafico--node {
+        grid-row: 5 / 6;
+        grid-column: 2 / 4;
+    }
+}
