--- a/css/style.css
+++ b/css/style.css
@@ -174,13 +174,69 @@ h3 {
     background-image: url(../img/grafico1.jpg);
 
 }
-.grafico--node{
+
+.grafico--node {
     background-image: url(../img/grafico2.jpg);
     grid-row: 8 / 9;
 }
-@media (min-width: 768px){
+
+@media (min-width: 768px) {
     .grafico--node {
         grid-row: 5 / 6;
         grid-column: 2 / 4;
     }
+}
+
+
+
+/**Nosotros**/
+.nosotros {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+
+}
+
+@media (min-width: 768px) {
+    .nosotros {
+
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.nosotros__imagen {
+    grid-row: 1 / 2;
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .nosotros__imagen {
+        grid-column: 2 / 3;
+    }
+}
+
+/**Bloques**/
+
+.bloques {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+@media (min-width: 786px) {
+    .bloques {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.bloque {
+    text-align: center;
+}
+
+.bloque__imagen {
+    width: 50%;
+}
+
+.bloque__titulo {
+    margin: 0;
 }
